fix(images): remove object-fit:cover from base img rule to prevent layout issues

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -90,8 +90,7 @@ body {
 img {
   max-width: 100%;
   height: auto;
-  display: block;
-  object-fit: cover; }
+  display: block; }
 
 ul {
   margin: 0px;
